--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Daniel Brannon</title>
-  <meta name="description" content="This is the website of Daniel Brannon. He is an Associate Professor of Marketing at the University of Northern Colorado">
+  <title>Amber Owens</title>
+  <meta name="description" content="This is the website of Amber Owens. She is a Marketing and Management undergraduate student at the University of Northern Colorado">
   <meta name="keywords" content="daniel brannon, marketing, northern colorado, consumers, teaching, digital marketing" >
 
   <!-- Favicons -->
