updated the keywords in the head section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Amber Owens</title>
   <meta name="description" content="This is the website of Amber Owens. She is a Marketing and Management undergraduate student at the University of Northern Colorado">
-  <meta name="keywords" content="daniel brannon, marketing, northern colorado, consumers, teaching, digital marketing" >
+  <meta name="keywords" content="Amber Owens, marketing, management, northern colorado, student" >
 
   <!-- Favicons -->
   <link href="assets/img/cat-favicon.png" rel="icon"> <!-- replaced original favicon with cat-->
