update to a few words about me

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
           <div class="col-lg-6 content order-lg-1 order-2">
             <h2 class="title">A Few Words About Me</h2>
             <p>
-              I am a marketing and management student at the University of Northern Colorado. I am also minoring in psychology and will be continuing my education through the pursuit of my MBA upon graduation. I currently work as an Assistant Store Manager for Follet Hogher Education at the UNC Bookstore. When I am not in class or working, I enjoy spending time with my children, hiking, going to movies, and playing video games.
+              I am a marketing and management student at the University of Northern Colorado. I am also minoring in psychology and will be continuing my education through the pursuit of my MBA upon graduation. I currently work as an Assistant Store Manager for Follet Hogher Education at the UNC Bookstore. When I am not in class or working, I enjoy spending time with my children, hiking, yoga, going to movies, and playing video games.
             </p>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
