Updated the title and description of the research interests section on the about page

--- a/about.html
+++ b/about.html
@@ -83,8 +83,8 @@
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
-              <h4 class="title"><a href="">Research Interests</a></h4>
-              <p class="description">My research topics of interest include human-computer interaction, consumer financial decision-making, premium/luxury consumption. My work has been published in top business journals including Journal of Consumer Research, Journal of the Academy of Marketing Science, and Journal of Business Research. <a href = https://scholar.google.com/citations?user=rDQdoI0AAAAJ&hl=en> Check out my Google Scholar page!</a></p>
+              <h4 class="title"><a href="">Future Career Interests</a></h4>
+              <p class="description">My future goals include purusing a career in digital marketing and eventually marketing management. I hope to continue gaining management experience through my current employment with Follett Higher Education while pursuing my education. Then I hope to move into a digital marketing role either within Follett or in a larger corporation within the Colorado area.
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
