Updated the title and description of the teaching interests section of the about me page

--- a/about.html
+++ b/about.html
@@ -89,8 +89,8 @@
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="">Teaching Interests</a></h4>
-              <p class="description">Classes I have taught include Consumer Behavior, Marketing Research and Analysis, Web and Digital Ad Analytics, and Digital Advertising. My teaching philosophy is centered around providing students with both theory and hands-on experience in the latest marketing trends and technologies. I strive to provide a positive and supportive learning environment in the classroom. Relevant marketing technologies I teach include Google Analytics, Google Tag Manager, Google Data Studio, Google Search and Display Ads, Tableau, JASP, HTML/CSS, and Qualtrics.</p>
+              <h4 class="title"><a href="">My Story of Growth</a></h4>
+              <p class="description">Another goal that I have is to use my uniqe story to help others along their path to healing and growth. Before beginning my educational goal I spent nearly a decade of my life struggling with drug addiction. When I finally found my way to being clean, I was in my late 20s and pregnant with my second son. Since then I have gotten myself into college, maintained a 3.5 and above GPA, found rewarding employment, and done all of this while raising my younger son on my own. I hope to inspire others in recovery by showing them that with hard work and time it is possible to build a life that they can be proud of. Anything is possible when we believe in ourselves and are willing to work for it!</p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
