--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bi bi-binoculars"></i></div>
               <h4 class="title"><a href="">More About Me</a></h4>
-              <p class="description">I have a lovely family! My wife Noemi and my two kids Daniella and Gabriel keep me busy on most weekends and weekday evenings. What have I been into lately? I play some chess (pporly) on Chess.com, ride my bike on the Poudre River Trail, am trying to learn some French, and am getting back into playing Magic the Gathering.</p>
+              <p class="description">I have two awesome children, Harley and Troy. I have recently found that I have a love for traveling, which I hope to be able to share with them. I enjoy listening to podcasts and am currently engaged in a Wardlings campaign with my oldest son and other members of our family!</p>
             </div>
 
           </div>
