Changed the title on the contact page to contact information

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Blog</title>
+  <title>Contact Information</title>
   <meta name="description" content="This page has my contact info." >
   <meta name="keywords" content="Amber Owens, contact" >
 
