Updated the address, email address, and phone number on the contact page

--- a/contact.html
+++ b/contact.html
@@ -85,17 +85,17 @@
             <div class="info">
               <div>
                 <i class="bi bi-geo-alt"></i>
-                <p>501 20th St, Greeley, CO 80639</p>
+                <p>2045 10th Ave Greeley, CO 80631</p>
               </div>
 
               <div>
                 <i class="bi bi-envelope"></i>
-                <p>daniel.brannon@unco.edu</p>
+                <p>camberowens1118@gmail.com</p>
               </div>
 
               <div>
                 <i class="bi bi-phone"></i>
-                <p>999-999-9999</p>
+                <p>(720)689-1151</p>
               </div>
             </div>
 
