--- a/video.html
+++ b/video.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Blog</title>
-  <meta name="description" content="This page is my personal blog" >
-  <meta name="keywords" content="Daniel Brannon, blog" >
+  <title>Video</title>
+  <meta name="description" content="This is a video I like" >
+  <meta name="keywords" content="Amber Owens, blog" >
 
   <!-- Favicons -->
   <link href="assets/img/cat-favicon.png" rel="icon">
