--- a/blog.html
+++ b/blog.html
@@ -78,10 +78,10 @@
         <div class="card">
           <h2>Top 5 Recommended External Certifications for Any Marketer</h2>
           <h5>These certification programs will help any marketer level up their resume, as well as give you experience with relevant tools!</h5>
-          <p style="font-size:25px"> 1. Contagious by Jonah Berger</p>
+          <p style="font-size:25px"> 1. Hubspot Digital Marketing Certification by Hubspot</p>
           <p><a href="https://www.amazon.com/Contagious-Things-Catch-Jonah-Berger/dp/1451686587">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/contagious-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 2. Don't Make Me Think by Steve Krug</p>
+          <p style="font-size:25px"> 2. </p>
           <p> <a href="https://www.amazon.com/Dont-Make-Think-Revisited-Usability/dp/0321965515/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/think-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 3. Influence by Robert Cialdini</p>
@@ -90,7 +90,7 @@
           <p style="font-size:25px"> 4. Predictably Irrational by Dan Ariely</p>
           <p><a href="https://www.amazon.com/Predictably-Irrational-1-Exp-Rev/dp/B0076YEIFQ/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/irrational-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 5. Nudge by Richard Thaler and Cass Sunstein</p>
+          <p style="font-size:25px"> 5. Google Analytics Beginner Certification by Google</p>
           <p><a href="https://www.amazon.com/Nudge-Final-Richard-H-Thaler/dp/014313700X/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/nudge-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
         </div>
