--- a/blog.html
+++ b/blog.html
@@ -78,20 +78,20 @@
         <div class="card">
           <h2>Top 5 Recommended External Certifications for Any Marketer</h2>
           <h5>These certification programs will help any marketer level up their resume, as well as give you experience with relevant tools!</h5>
-          <p style="font-size:25px"> 1. Hubspot Digital Marketing Certification by Hubspot</p>
-          <p><a href="https://www.amazon.com/Contagious-Things-Catch-Jonah-Berger/dp/1451686587">
+          <p style="font-size:25px"> 1. Digital Marketing Certification by Hubspot</p>
+          <p><a href="https://academy.hubspot.com/courses/digital-marketing">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/contagious-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 2. </p>
-          <p> <a href="https://www.amazon.com/Dont-Make-Think-Revisited-Usability/dp/0321965515/">
+          <p style="font-size:25px"> 2. Professional Digital Marketing Course + PCM from American Marketing Association by the Digital Marketing Institute </p>
+          <p> <a href="https://digitalmarketinginstitute.com/students/courses/professional-certificate-in-digital-marketing-usa">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/think-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 3. Influence by Robert Cialdini</p>
-          <p><a href="https://www.amazon.com/Influence-Psychology-Persuasion-Robert-Cialdini/dp/006124189X/">
+          <p style="font-size:25px"> 3. Fundamentals of Digital Marketing Cretification by Google</p>
+          <p><a href="https://learndigital.withgoogle.com/digitalgarage/course/digital-marketing">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/influence-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 4. Predictably Irrational by Dan Ariely</p>
-          <p><a href="https://www.amazon.com/Predictably-Irrational-1-Exp-Rev/dp/B0076YEIFQ/">
+          <p style="font-size:25px"> 4. Content Marketing Certification by Hubspot </p>
+          <p><a href="https://academy.hubspot.com/courses/content-marketing">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/irrational-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 5. Google Analytics Beginner Certification by Google</p>
-          <p><a href="https://www.amazon.com/Nudge-Final-Richard-H-Thaler/dp/014313700X/">
+          <p><a href="https://analytics.google.com/analytics/academy/course/6">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/nudge-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
         </div>
       </div>
