updated the image files in the blog section of the blog page

--- a/blog.html
+++ b/blog.html
@@ -80,19 +80,19 @@
           <h5>These certification programs will help any marketer level up their resume, as well as give you experience with relevant tools!</h5>
           <p style="font-size:25px"> 1. Digital Marketing Certification by Hubspot</p>
           <p><a href="https://academy.hubspot.com/courses/digital-marketing">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/contagious-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://github.com/AmberShae0225/simplesite/blob/main/assets/img/Hubspot%20Academy%20Logo.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 2. Professional Digital Marketing Course + PCM from American Marketing Association by the Digital Marketing Institute </p>
           <p> <a href="https://digitalmarketinginstitute.com/students/courses/professional-certificate-in-digital-marketing-usa">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/think-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://github.com/AmberShae0225/simplesite/blob/main/assets/img/Digital%20Marketing%20Institute%20Logo.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 3. Fundamentals of Digital Marketing Cretification by Google</p>
           <p><a href="https://learndigital.withgoogle.com/digitalgarage/course/digital-marketing">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/influence-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://github.com/AmberShae0225/simplesite/blob/main/assets/img/Google%20Digital%20Garage%20Logo.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 4. Content Marketing Certification by Hubspot </p>
           <p><a href="https://academy.hubspot.com/courses/content-marketing">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/irrational-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://github.com/AmberShae0225/simplesite/blob/main/assets/img/Hubspot%20Academy%20Logo.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 5. Google Analytics Beginner Certification by Google</p>
           <p><a href="https://analytics.google.com/analytics/academy/course/6">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/nudge-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://github.com/AmberShae0225/simplesite/blob/main/assets/img/Google%20Analytics%20Logo.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
         </div>
       </div>
       <div class="rightcolumn">
