--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
       <div class="container">
         <div class="row" data-aos="zoom-in">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3 class="cta-title">Click Here Now to View My Top Recommended Consumer Psychology Books!</h3>
-            <p class="cta-text"> These are books that I have found invaluable for understanding consumer psychology in an increasingly digital world of marketing. </p>
+            <h3 class="cta-title">Click Here Now to View My Top Recommended External Marketing Cretifications!</h3>
+            <p class="cta-text"> These are certificates that will add something extra to any marketers resume. </p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="blog.html">Click here to get the booklist</a>
+            <a class="cta-btn align-middle" href="blog.html">Click Here to Get The Recommendations</a>
           </div>
         </div>
 
