--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-5G5HXR2');</script>
+  <!-- End Google Tag Manager -->
+
   <title>Amber Owens</title>
   <meta name="description" content="This is the website of Amber Owens. She is a Marketing and Management undergraduate student at the University of Northern Colorado">
   <meta name="keywords" content="Amber Owens, marketing, management, northern colorado, student" >
@@ -30,6 +38,11 @@
 </head>
 
 <body> <!-- the body element contains the content of the webpage TEST123-->
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5G5HXR2"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <!-- ======= Header ======= --> <!-- header element represents introductory content such as navigation aids and some heading elements-->
   <header id="header" class="fixed-top d-flex align-items-center header-transparent"> 
